# snipersim

./: .gitignore  .gitmodules  CHANGELOG  COMPILATION  CONTRIBUTORS  Doxyfile  LICENSE  LICENSE.academic  LICENSE.interval  Makefile  Makefile.config  NOTICE  README  README.arm64  README.md  README.riscv  record-trace  run-sniper  update_from_snipersim.txt
common/: Makefile  Makefile.common
common/config/: config.cpp  config.hpp  config_exceptions.hpp  config_file.cpp  config_file.hpp  config_file_grammar.hpp  key.cpp  key.hpp  section.cpp  section.hpp  test.cfg
common/core/: bbv_count.cc  bbv_count.h  core.cc  core.h  pin_memory_manager.cc  pin_memory_manager.h  syscall_model.cc  syscall_model.h  thread.cc  thread.h  topology_info.cc  topology_info.h
common/crash_consistency/: epoch_cntlr.cc  epoch_cntlr.h  epoch_manager.cc  epoch_manager.h
common/fault_injection/: fault_injection.cc  fault_injection.h  fault_injector_random.cc  fault_injector_random.h
common/misc/: FSBAllocator.hh  _thread.h  allocator.h  average.h  barrier.cc  barrier.h  basic_hash.cc  basic_hash.h  bottlegraph.cc  bottlegraph.h  callstack.cc  callstack.h  circular_log.cc  circular_log.h  circular_queue.h  cond.cc  cond.h  config.cc  config.h  cpuid.h  distribution.h  fixed_point.h  fixed_types.h  fxsupport.cc  fxsupport.h  handle_args.cc  handle_args.h  hash_tls.cc  itostr.h  lock.h  locked_hash.cc  locked_hash.h  log.cc  (+45 more)
config/: base.cfg  baseline-nvm.cfg  baseline.cfg  beckton.cfg  cacheonly.cfg  cc-fast.cfg  donuts.cfg  dram-cache.cfg  dunnington.cfg  gainestown-nvm.cfg  gainestown.cfg  jikes.cfg  nehalem.cfg  nuca-cache.cfg  nvoverlay.cfg  oneipc.cfg  paper-base.cfg  paper-nico.cfg  paper-picl.cfg  paper-thynvm.cfg  prefetcher.cfg  rob.cfg  writethrough.cfg
decoder_lib/: Makefile  arm_decoder.cc  arm_decoder.h  decoder.cc  decoder.h  riscv_decoder.cc  riscv_decoder.h  x86_decoder.cc  x86_decoder.h
docker/: Dockerfile  Dockerfile-ubuntu-16.04  Dockerfile-ubuntu-18.04  Dockerfile-ubuntu-20.04  Dockerfile-ubuntu-22.04  Dockerfile-ubuntu-24.04  Makefile
frontend/: Doxyfile  bbv_count.cc  bbv_count.h  frontend-inl.h  frontend.h  frontend.tcc  frontend_callbacks-inl.h  frontend_callbacks.h  frontend_callbacks.tcc  frontend_control-inl.h  frontend_control.h  frontend_control.tcc  frontend_defs.h  frontend_options-inl.h  frontend_options.h  frontend_options.tcc  frontend_syscall-inl.h  frontend_syscall.h  frontend_syscall.tcc  frontend_threads.h  frontend_threads.tcc  frontend_utils-inl.h  frontend_utils.h
frontend/dr-frontend/: CMakeLists.txt  README.md  dr_fe_control.h  dr_fe_control.tcc  dr_fe_copy.h  dr_fe_copy.tcc  dr_fe_lock.h  dr_fe_lock.tcc  dr_fe_macros.h  dr_fe_options.h  dr_fe_options.tcc  dr_fe_syscall.h  dr_fe_syscall.tcc  dr_fe_threads.h  dr_fe_threads.tcc  dr_frontend.cc  dr_frontend.h
include/: sim_api.h
pin/: Makefile  clock_skew_minimization.cc  clock_skew_minimization.h  codecache_trace.cc  codecache_trace.h  handle_syscalls.cc  handle_syscalls.h  inst_mode.cc  inst_mode_macros.h  instruction_decoder.cc  instruction_decoder.h  instruction_modeling.cc  instruction_modeling.h  local_storage.cc  local_storage.h  pin_config.cc  pin_exceptions.cc  pin_exceptions.h  pin_lock.cc  pin_lock.h  pin_sim.cc  pin_thread.cc  pin_thread.h  pin_tls.cc  progress_trace.cc  progress_trace.h  redirect_memory.cc  redirect_memory.h  routine_replace.cc  routine_replace.h  routine_tracer.cc  routine_tracer.h  spin_loop_detection.cc  spin_loop_detection.h  thread_start.cc  thread_start.h  toolreg.cc  toolreg.h  trace_rtn.cc  trace_rtn.h
riscv/: build-riscv.sh
scripts/: appevents.py  bbvtrace.py  bottlegraph.py  dvfs.py  energystats.py  hpitest.py  ipcthreadtrace.py  ipctrace.py  lctrace.py  markers.py  output-as-markers.py  periodic-stats.py  periodicins-stats.py  powertrace.py  progresstrace.py  roi-icount.py  roi-iter.py  scheduler-locality.py  simuserroi.py  stattrace.py  stop-by-icount.py  stop-by-time.py  synctrace.py  syscall_strings.py  syscalls.py  tcp.py
sde_kit/: README.txt  sde  sde.sig  sde64  sde64.sig  xed.sig  xed64.sig
sift/: Makefile  sift.h  sift_assert.h  sift_format.h  sift_reader.cc  sift_reader.h  sift_utils.cc  sift_utils.h  sift_writer.cc  sift_writer.h  siftdump.cc  zfstream.cc  zfstream.h
standalone/: Makefile  exceptions.cc  exceptions.h  standalone.cc
tools/: Makefile  addr2line.py  attachgdb.py  bottlegraph.py  buildstack.py  carbon_sim_spawner.py  carbon_simd.py  checkdependencies-riscv.sh  checkdependencies.py  cpistack-collect.py  cpistack.py  cpistack_data.py  cpistack_items.py  cpistack_results.py  debugpin.py  disect.py  dumpstats.py  env_setup.py  env_setup.sh  gen_backtrace.py  gen_cheetah.py  gen_memory_profile.py  gen_memtrack.py  gen_profile.py  gen_simout.py  gen_syscall_strings.py  gen_topology.py  get_os_type.sh  gnuplot.py  gprof2dot.py  graphite_lib.py  graphite_tools_local.py  gridcolors.py  iris4.csv  llcstack.py  localjson.py  makebuildscripts.py  makepythondist.sh  makerelativepath.py  mcpat.py  (+21 more)
user/: Makefile  thread_support.c
(+901 files in other folders)
